tests/models/struct/unnamed/i32/fail/validate.rs
use dade::{model, Result};
#[model]
struct TestModel (
   #[field(validate = validate_fn)]
    i32
);
fn main() {}
